plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.0' // Updated version
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.opsmonsters'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starter Dependencies

	implementation 'org.springframework.boot:spring-boot-starter-mail'



	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT Dependencies
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Springdoc OpenAPI Dependencies
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
	implementation 'org.glassfish:jakarta.el:4.0.2'



	// Redis & Jackson Dependencies
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate6:2.18.1'

	implementation 'javax.annotation:javax.annotation-api:1.3.2'

	// Razorpay Java SDK
	implementation 'com.razorpay:razorpay-java:1.3.1'



	// MySQL JDBC Driver
	runtimeOnly 'mysql:mysql-connector-java:8.0.26'

	// Testing Dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
	useJUnitPlatform()
}